<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_dashboard"
        android:orderInCategory="101"
        android:title="@string/action_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="103"
        android:title="@string/action_profile"
        android:icon="@drawable/ic_profile_black_24dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="104"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="105"
        android:title="@string/action_logout"
        android:icon="@drawable/ic_power_logout_new_black_24dp"
        app:showAsAction="never"/>

</menu>